@@ -11,8 +11,9 @@ linuxmuster-linbo (2.4.0-0) lmn7; urgency=low
   * fix #150: Additional grub menu option "Start with Linbo".
   * minor linbo grub theme improvments.
   * fixed kernel and initrd paths and linbo menu class in remaining grub config templates.
+  * fix #153: Extend linbo clients ssh authorized_keys.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 27 Nov 2020 15:08:57 +0100
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 27 Nov 2020 19:23:37 +0100
 
 linuxmuster-linbo (2.3.68-0) lmn7; urgency=low
 
